# desktop-kDrive

./: .clang-format  .gitconfig  .gitignore  .gitmodules  .sonarcloud.properties  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  README.md  THEME.cmake  THIRD_PARTY_NOTICES.md  VERSION.cmake  client.qrc  conanfile.py  config.h.in  embedded.provisionprofile  embedded.provisionprofile.appstore  embedded.provisionprofile.direct.provisionprofile  index.js  kDrive_launcher.bat  kdrive.desktop.in  litesync-exclude.lst  package-lock.json  package.json  run_clang-format.sh  sync-exclude-linux.lst  sync-exclude-osx.lst  sync-exclude-win.lst  vcpkg.json  version.h.in  version.json
E2Etest/common/: CMakeLists.txt  test.cpp
E2Etest/common/selfrestarter/: testselfrestarter.cpp  testselfrestarter.h
admin/osx/: CMakeLists.txt  FinderSyncExtension.entitlements  Info.plist  LiteSyncExtension.entitlements  create_mac.sh.cmake  create_mac_appstore.sh.cmake  embedded_direct.provisionprofile  gen_pkgproj_cmake.sh  kDrive4.entitlements  kDriveDebug.entitlements  kDriveUninstaller.entitlements  kdrive.entitlements  macosx.pkgproj.cmake  post_install.sh.cmake  pre_install.sh.cmake  sign_app.sh  sign_app_debug.sh
admin/osx/installer-assets/: License.rtf
extensions/MacOSX/: CMakeLists.txt
extensions/MacOSX/kDriveLiteSync.xcworkspace/: contents.xcworkspacedata
extensions/windows/standard/: CMakeLists.txt
libcommonext/: CMakeLists.txt  commonext.cpp  commonext.h
src/: CMakeLists.txt  test.cov
src/common/: filepermissionholder.cpp  filepermissionholder.h  filesystembase.cpp  filesystembase.h  utility.cpp  utility.h  utility_linux.cpp  utility_mac.cpp  utility_win.cpp
src/crashreporter/: CMakeLists.txt  CrashReporterConfig.h.in  main.cpp
src/front/macOS/: .periphery.yml  .swiftformat  .swiftlint.yml  mise.toml  swiftgen.yml
src/gui/: AGENTS.md  CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  abstractfileitemwidget.cpp  abstractfileitemwidget.h  actionwidget.cpp  actionwidget.h  adddriveconfirmationwidget.cpp  adddriveconfirmationwidget.h  adddriveextensionsetupwidget.cpp  adddriveextensionsetupwidget.h  adddrivelistwidget.cpp  adddrivelistwidget.h  adddrivelocalfolderwidget.cpp  adddrivelocalfolderwidget.h  adddriveloginwidget.cpp  adddriveloginwidget.h  adddriveserverfolderswidget.cpp  adddriveserverfolderswidget.h  adddriveslitesyncwidget.cpp  adddriveslitesyncwidget.h  adddrivesmartsyncwidget.cpp  adddrivesmartsyncwidget.h  adddrivewizard.cpp  adddrivewizard.h  appclient.cpp  appclient.h  bandwidthdialog.cpp  bandwidthdialog.h  basefoldertreeitemwidget.cpp  basefoldertreeitemwidget.h  betaprogramdialog.cpp  betaprogramdialog.h  bigfoldersdialog.cpp  bigfoldersdialog.h  bottomwidget.cpp  bottomwidget.h  buttonsbarwidget.cpp  buttonsbarwidget.h  (+168 more)
src/gui/info/: driveinfoclient.cpp  driveinfoclient.h  syncinfoclient.cpp  syncinfoclient.h  userinfoclient.cpp  userinfoclient.h
src/gui/updater/: updatedialog.cpp  updatedialog.h  updateerrordialog.cpp  updateerrordialog.h  updaterclient.cpp  updaterclient.h
src/gui/wizard/: webview.cpp  webview.h  webview.ui
src/gui4/: AGENTS.md  CMakeLists.txt
src/gui4/linux/: AGENTS.md  CMakeLists.txt  appclientlinux.cpp  appclientlinux.h  main.cpp
src/gui4/macOS/: .import_loco.yml  .swiftformat  AGENTS.md  CMakeLists.txt  mise.toml  swiftgen.yml
src/gui4/windows/: AGENTS.md
src/launcher/: CMakeLists.txt  main.cpp
src/libcommon/: AGENTS.md  CMakeLists.txt  asserts.h  comm.h  commjson.cpp  commjson.h  updater.cpp  updater.h
src/libcommon/data/: drive.cpp  drive.h
src/libcommon/info/: accountinfo.cpp  accountinfo.h  driveavailableinfo.cpp  driveavailableinfo.h  driveinfo.cpp  driveinfo.h  errorinfo.cpp  errorinfo.h  exclusionappinfo.cpp  exclusionappinfo.h  nodeinfo.cpp  (+23 more)
src/libcommongui/: CMakeLists.txt  MatomoClient.cpp  MatomoClient.h  commclient.cpp  commclient.h  logger.cpp  logger.h  matomoclient.cpp  matomoclient.h
src/libcommonserver/: AGENTS.md  CMakeLists.txt  commserver.cpp  commserver.h  plugin.cpp  plugin.h  vfs.cpp  vfs.h  vfsworker.h
src/libparms/: AGENTS.md  CMakeLists.txt
src/libsyncengine/: AGENTS.md  CMakeLists.txt  log4cplus.properties.in
src/server/: AGENTS.md  CMakeLists.txt  abstractiodevice.h  app_resources.rc  appserver.cpp  appserver.h  commapi.cpp  commapi.h  commlistener.cpp  commlistener.h  commmanager.cpp  commmanager.h  commserver.cpp  commserver_mac.h  commserver_mac.mm  kDrive.exe.manifest  logArchiver.cpp  logarchiver.cpp  logarchiver.h  mainserver.cpp  navigationpanehelper.cpp  navigationpanehelper.h  oldcommserver.cpp  oldcommserver.h  overlayiconsehelper.cpp  overlayiconsehelper.h  socketapi.cpp  socketapi.h  socketapisocket_mac.h  socketapisocket_mac.mm  socketlistener.cpp  socketlistener.h
test/: AGENTS.md  CMakeLists.txt  cas_de_test.md  cppunit_test_template.cpp  cppunit_test_template.h  test.cpp  testincludes.h
test/libcommon/: CMakeLists.txt  test.cpp
test/libcommonserver/: CMakeLists.txt  test.cpp
test/libparms/: CMakeLists.txt  test.cpp
test/libsyncengine/: AGENTS.md  CMakeLists.txt  test.cpp  testbasewithparmsdb.cpp  testbasewithparmsdb.h
test/mocks/: mockkeychainstorage.cpp  mockkeychainstorage.h
test/server/: CMakeLists.txt  test.cpp
test/test_ci/: .my_hidden_file.txt  test.lnk
test/test_classes/: syncpaltest.cpp  syncpaltest.h  testinitialsituationgenerator.cpp  testinitialsituationgenerator.h  testsituationgenerator.cpp  testsituationgenerator.h
test/test_utility/: dataextractor.cpp  dataextractor.h  iohelpertests.cpp  iohelpertests.h  iohelpertestutilities.cpp  iohelpertestutilities.h  localtemporarydirectory.cpp  localtemporarydirectory.h  remotetemporarydirectory.cpp  remotetemporarydirectory.h  temporarydirectory.cpp  temporarydirectory.h  testbase.cpp  testbase.h  testhelper_requests.h  testhelpers.cpp  testhelpers.h  testhelpers_linux.cpp  testhelpers_mac.cpp  testhelpers_requests.cpp  testhelpers_requests.h  testhelpers_win.cpp  timechecker.h  timeouthelper.cpp  timeouthelper.h
uninstaller/MacOSX/: CMakeLists.txt
(+4254 files in other folders)
